--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,11 @@
                 "ts": "never"
             }
         ],
-        "class-methods-use-this": ["error", { "exceptMethods": ["up", "down"] }]
+        "class-methods-use-this": "off",
+        "no-unused-vars": ["error", { "args":  "none"}],
+        "consistent-return": "off",
+        "no-underscore-dangle": "off",
+        "max-len": ["error", {"code":  140}]
     },
     "settings": {
         "import/resolver" : {
