--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "lesson4",
+  "name": "module_node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "rimraf dist && tsc-watch --onSuccess 'npm run watch:server'",
-    "watch:server": "nodemon 'src/app.ts' --watch './src'",
+    "start": "rimraf dist && tsc-watch --onSuccess \"nodemon ./src/app.ts\"",
     "lint": "eslint --cache --ext .js,.ts src",
     "lint:fix": "npm run lint -- --fix",
     "typeorm": "node -r ts-node/register ./node_modules/typeorm/cli.js",
-    "migration:generate": "typeorm migration:create -n $npm_package_config",
+    "migration:generate": "typeorm migration:create -n $npm_config_name",
     "migration:run": "npm run typeorm migration:run",
     "migration:revert": "npm run typeorm migration:revert"
   },
@@ -17,13 +16,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.43"
+    "typeorm": "^0.2.43",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.19",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -33,7 +39,6 @@
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
     "ts-node": "^10.5.0",
-    "tsc-watch": "^4.6.0",
-    "typescript": "^4.5.5"
+    "tsc-watch": "^4.6.0"
   }
 }
